# GloboTicket-Python

./: .pre-commit-config.yaml  README.md  pyproject.toml
globoticket/: __init__.py  api.py  database.py  frontmatter.py  models.py
tests/: conftest.py  test_find_frontmatter_files.py  test_parse_frontmatter.py
